<resources>
    <string name="app_name">HabiTapp</string>
    <string name="previous_page">Previous page</string>

    <!--home-->
    <string name="search">Search</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="today_icon_description">Icon for today</string>
    <string name="today">Today</string>
    <string name="number">0</string>
    <string name="my_list">My List</string>
    <string name="add_list">Add Lists</string>

    <!--create new reminder-->
    <string name="cancel">Cancel</string>
    <string name="new_reminder">New Reminder</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>

    <!--add new list-->
    <string name="new_list">New List</string>
    <string name="done">Done</string>

    <!--show reminders-->
    <string name="lists">Lists</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="no_reminders">No Reminders</string>

</resources>