<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.AddListActivity">

    <TextView
        android:id="@+id/cancel_add_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_list_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/new_list"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/done_add_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/done"
        android:textColor="@color/done_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/list_icon_and_colour"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/green_circle"
        android:src="@drawable/icon_1_1_list_white"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_list_header" />

    <EditText
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/s_grey_background"
        android:focusedByDefault="true"
        android:fontFamily="@font/monda_bold"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/green"
        android:textColorHighlight="@color/light_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_icon_and_colour" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_cancel_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/list_name"
        app:layout_constraintEnd_toEndOf="@+id/list_name"
        app:layout_constraintTop_toTopOf="@+id/list_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_colour_icons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_icon_icons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_colour_icons" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!--<GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:columnCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/red_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/red_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/orange_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/orange_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/yellow_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/yellow_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/green_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/grey_outline_circle"
                android:padding="6dp"
                android:src="@drawable/green_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/light_blue_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/light_blue_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/blue_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/blue_circle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navy_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/navy_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/maroon_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/maroon_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/purple_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/purple_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/brown_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/brown_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/light_black_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/light_black_circle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/light_pink_circle"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/white_outline_circle"
                android:padding="6dp"
                android:src="@drawable/light_pink_circle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">

            <ImageView
                android:id="@+id/icon_1_1_list"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/selected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_1_list" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_1_2_bookmark"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_2_bookmark" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_1_3_key"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_3_key" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_1_4_gift"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_4_gift" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_1_5_cake"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_5_cake" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_1_6_smile"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_1_6_smile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">

            <ImageView
                android:id="@+id/icon_2_1_grad_hat"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_1_grad_hat" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_2_2_backpack"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_2_backpack" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_2_3_pencil"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_3_pencil" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_2_4_page"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_4_page" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_2_5_open_book"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_5_open_book" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon_2_6_folder"
                android:layout_width="@dimen/selected_list_colour_circle_w_h"
                android:layout_height="@dimen/selected_list_colour_circle_w_h"
                android:background="@drawable/unselected_icon_background"
                android:padding="12dp"
                android:src="@drawable/icon_2_6_folder" />
        </LinearLayout>
    </GridLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>

